fix: adjust padding and position for header and icon alignment

--- a/index.css
+++ b/index.css
@@ -6,8 +6,9 @@ body {
   }
 
   h1 {
-    padding: 30px 0 20px 27px;
+    padding: 30px 0 20px 26px;
     color: #5f9341;
+    position: relative;
   }
   
   h1::before {
@@ -16,8 +17,8 @@ body {
     position: absolute;
     width: 24px;
     height: 24px;
-    top: 45px;
-    left: 385px;
+    top: 35px;
+    left: 0px;
     background-size: cover;
   }
 
